# carmabot

./: README.md  pylama.ini  requirements.txt  setup.cfg
src/carma_bot/: bot_setup.py  carma_storage.py  config.py  handlers.py  main.py  phrases.py  user_dataclass.py
tests/: test_carma_storage.py  test_handlers.py
