[metadata]
name = carma_bot
version = 0.0.0
author = Niko Bolg
author_email = nkbolg@gmail.com

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
zip_safe = False
include_package_data = True
install_requires =
    aiogram==2.20
    python-dotenv==0.20.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    carmabot-run = carma_bot.main:main

[options.extras_require]
dev =
    flake8
    pylint
    pip-tools
    pylama
    black
